--- a/raggish/app/title.html
+++ b/raggish/app/title.html
@@ -68,10 +68,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/lib/raggish.js"></script>
-        <script src="scripts/lib/raggish.sampler.js"></script>
-        <script src="scripts/lib/raggish.leftHand.js"></script>
-        <script src="scripts/lib/raggish.rightHand.js"></script>
+        <script src="scripts/sampler.js"></script>
         <!-- endbuild -->
 </body>
 </html>
